# pytest-stats

./: mypy.ini  pyproject.toml  release-notes.md
.github/workflows/: commit.yml  publish.yml  pull-request.yml
src/pytest_stats/: pytest_stats.py  reporters_registry.py  test_item_data.py  test_session_data.py
tests/: dummy_test_reporter.py  test_default_text_reporter.py  test_plugin.py  test_reporter_registry.py
