[tool.poetry]
name = "pytest-stats"
version = "0.0.1"
description = "Pytest extensions, report stats to db"

authors = ["Amit Wertheimer <12250123+amitwer@users.noreply.github.com>"]
maintainers = []
readme = "README.md"

packages = [
    { include = "pytest_stats", from = "src" },
]
keywords = []

classifiers = ["Framework :: Pytest"]


[tool.poetry.plugins."pytest11"]
pytest_stats = "pytest_stats.pytest_stats"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest-cov = ">=5.0.0"
pytest = ">=8.2.2"
mypy = ">=1.10.1"
pylint = "*"
assertpy = "*"

[tool.setuptools.package-data]
"pytest-stats" = ["py.typed"]

[tool.mypy]
python_version = "3.8"

[tool.pytest.ini_options]
log_cli_level = "DEBUG"
testpaths = "tests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint."messages control"]
disable = "c-extension-no-member,missing-module-docstring,missing-function-docstring,missing-class-docstring,too-few-public-methods"
[tool.pylint.format]
max-line-length=120
max-module-lines=200
max-args=7
